<package format="2">
  <name>scan_26xx</name>
  <version>0.0.1</version>
  <description>This package publishes a PointCloud message out of a MICRO-EPSILON scanCONTROL_26xx laser scanner.
  </description>

  <maintainer email="dennis.hartmann@student.kit.edu">Dennis Hartmann</maintainer>
  <author>Dennis Hartmann</author>

  <license>GPL,LGPL</license>
<!--   <url type="website">http://ros.org/wiki/cob_sick_lms1xx</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>diagnostic_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>aravis-0.4</depend>
  <depend>llt</depend>
  <depend>mescan</depend>

</package>


