<package format="2">
  <name>scan_26xx</name>
  <version>1.0.0</version>
  <description>This package publishes PointCloud2 messages of profiles meassured by a MICRO-EPSILON scanCONTROL_26xx laser scanner.
  </description>

  <maintainer email="dennis.hartmann@student.kit.edu">Dennis Hartmann</maintainer>
  <author>Dennis Hartmann</author>

  <license>LGPL</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>glib-2.0</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>aravis-0.4</depend>
  <depend>libllt</depend>
  <depend>libmescan</depend>

</package>


